data/all_generated_tests/raw_wast_tests/br_table_UnreachableCodeExecution_2134.wast
;; 4. **Test with Misencoded Immediate Parameters:**    - Description: Create a `br_table` instruction with a vector of label indices and a default label, but deliberate misencoding of one of the parameters.    - Constraint Checked: Correct encoding of label index vectors and default label.    - Relates to Unreachable Code Execution: Misencoding could cause the branch to go to an unintended place and hit the `unreachable` instruction.

(assert_malformed
  (module
    (func
      (br_table 0x20 0x03 (i32.const 1)) ;; malformed immediate parameter
    )
  )
  "unexpected end of section or function"
)